--- a/q1/q1/index.html
+++ b/q1/q1/index.html
@@ -18,6 +18,11 @@
     <!-- Q1-1の回答はここから -->
     <!-- text-alignを使って左右中央寄せ -->
     <div class="q1--horizontality">
+      <div class="white-box">
+        <div class="purple-box">
+          <p class="text-align">text-align</p>
+        </div>
+      </div>
     </div>
     <!-- margin -->
     <!-- marginを使って左右中央寄せ -->
