--- a/q1/q1/index.html
+++ b/q1/q1/index.html
@@ -19,7 +19,7 @@
     <!-- text-alignを使って左右中央寄せ -->
     <div class="q1--horizontality">
       <div class="white-box">
-        <div class="purple-box">
+        <div class="align-box">
           <p class="text-align">text-align</p>
         </div>
       </div>
@@ -27,19 +27,28 @@
     <!-- margin -->
     <!-- marginを使って左右中央寄せ -->
     <div class="q1--horizontality">
+      <div class="white-box">
+          <p class="text-margin">margin</p>
+      </div>
     </div>
     <!-- Q1-1の回答はここまで -->
+
     <h3 class="question--title">Q1-2 上下左右中央寄せ</h3>
     <!-- Q1-2の回答はここから -->
     <!-- tableを使って上下左右中央寄せ -->
-    <div class="q1--perimeter">
+    <div class="q1--perimeter table-box">
+      <div class="cell-box">
+        <p class="text-table">table</p>
+      </div>
     </div>
     <!-- flexを使って上下左右中央寄せ -->
-    <div class="q1--perimeter">
+    <div class="q1--perimeter flex-box">
+      <p class="text-flex">flex</p>
     </div>
     <!-- positionを使って上下左右中央寄せ -->
     <div class="q1--position">
-      <div class="container">
+      <div class="container position-box">
+        <p class="text-position">position</p>
       </div>
     </div>
     <!-- Q1-2の回答はここまで -->
