--- a/q1/q1/index.html
+++ b/q1/q1/index.html
@@ -28,7 +28,9 @@
     <!-- marginを使って左右中央寄せ -->
     <div class="q1--horizontality">
       <div class="white-box">
+        <div>
           <p class="text-margin">margin</p>
+        </div>
       </div>
     </div>
     <!-- Q1-1の回答はここまで -->
