--- a/q5/q5/index.html
+++ b/q5/q5/index.html
@@ -16,15 +16,43 @@
     <h2 class="sub--title">Q5flex,grid</h2>
     <h3 class="question--title">Q5-1 横並び・縦並び</h3>
     <!-- Q5-1回答はここから -->
+    <div class="">
+      <div class="item--box">item1</div>
+      <div class="item--box">item2</div>
+      <div class="item--box">item3</div>
+      <div class="item--box">item4</div>
+      <div class="item--box">item5</div>
+    </div>
     <!-- Q5-1回答はここまで -->
     <h3 class="question--title">Q5-2 折り返し</h3>
     <!-- Q5-2回答はここから -->
+    <div class="">
+      <div class="item--box">item1</div>
+      <div class="item--box">item2</div>
+      <div class="item--box">item3</div>
+      <div class="item--box">item4</div>
+      <div class="item--box">item5</div>
+    </div>
     <!-- Q5-2回答はここまで -->
     <h3 class="question--title">Q5-3 水平方向揃え</h3>
     <!-- Q5-3回答はここから -->
+    <div class="">
+      <div class="item--box">item1</div>
+      <div class="item--box">item2</div>
+      <div class="item--box">item3</div>
+      <div class="item--box">item4</div>
+      <div class="item--box">item5</div>
+    </div>
     <!-- Q5-3回答はここまで -->
     <h3 class="question--title">Q5-4 グリッドレイアウト</h3>
     <!-- Q5-4回答はここから -->
+    <div class="">
+      <div class="item--box">item1</div>
+      <div class="item--box">item2</div>
+      <div class="item--box">item3</div>
+      <div class="item--box">item4</div>
+      <div class="item--box">item5</div>
+    </div>
     <!-- Q5-4回答はここまで -->
   </div>
 </body>
