--- a/q5/q5/index.html
+++ b/q5/q5/index.html
@@ -16,7 +16,28 @@
     <h2 class="sub--title">Q5flex,grid</h2>
     <h3 class="question--title">Q5-1 横並び・縦並び</h3>
     <!-- Q5-1回答はここから -->
-    <div class="">
+    <div class="flex">
+      <div class="item--box">item1</div>
+      <div class="item--box">item2</div>
+      <div class="item--box">item3</div>
+      <div class="item--box">item4</div>
+      <div class="item--box">item5</div>
+    </div>
+    <div class="flex--reverse">
+      <div class="item--box">item1</div>
+      <div class="item--box">item2</div>
+      <div class="item--box">item3</div>
+      <div class="item--box">item4</div>
+      <div class="item--box">item5</div>
+    </div>
+    <div class="flex--column">
+      <div class="item--box">item1</div>
+      <div class="item--box">item2</div>
+      <div class="item--box">item3</div>
+      <div class="item--box">item4</div>
+      <div class="item--box">item5</div>
+    </div>
+    <div class="flex--column--reverse">
       <div class="item--box">item1</div>
       <div class="item--box">item2</div>
       <div class="item--box">item3</div>
@@ -26,17 +47,89 @@
     <!-- Q5-1回答はここまで -->
     <h3 class="question--title">Q5-2 折り返し</h3>
     <!-- Q5-2回答はここから -->
-    <div class="">
+    <div class="flex--nowrap">
+      <div class="item--box">item1</div>
+      <div class="item--box">item2</div>
+      <div class="item--box">item3</div>
+      <div class="item--box">item4</div>
+      <div class="item--box">item5</div>
+      <div class="item--box">item6</div>
+      <div class="item--box">item7</div>
+      <div class="item--box">item8</div>
+      <div class="item--box">item9</div>
+      <div class="item--box">item10</div>
+      <div class="item--box">item11</div>
+      <div class="item--box">item12</div>
+      <div class="item--box">item13</div>
+      <div class="item--box">item14</div>
+      <div class="item--box">item15</div>
+    </div>
+    <div class="flex--wrap">
+      <div class="item--box">item1</div>
+      <div class="item--box">item2</div>
+      <div class="item--box">item3</div>
+      <div class="item--box">item4</div>
+      <div class="item--box">item5</div>
+      <div class="item--box">item6</div>
+      <div class="item--box">item7</div>
+      <div class="item--box">item8</div>
+      <div class="item--box">item9</div>
+      <div class="item--box">item10</div>
+      <div class="item--box">item11</div>
+      <div class="item--box">item12</div>
+      <div class="item--box">item13</div>
+      <div class="item--box">item14</div>
+      <div class="item--box">item15</div>
+    </div>
+    <div class="flex--wrap--reverse">
+      <div class="item--box">item1</div>
+      <div class="item--box">item2</div>
+      <div class="item--box">item3</div>
+      <div class="item--box">item4</div>
+      <div class="item--box">item5</div>
+      <div class="item--box">item6</div>
+      <div class="item--box">item7</div>
+      <div class="item--box">item8</div>
+      <div class="item--box">item9</div>
+      <div class="item--box">item10</div>
+      <div class="item--box">item11</div>
+      <div class="item--box">item12</div>
+      <div class="item--box">item13</div>
+      <div class="item--box">item14</div>
+      <div class="item--box">item15</div>
+    </div>
+    <!-- Q5-2回答はここまで -->
+    <h3 class="question--title">Q5-3 水平方向揃え</h3>
+    <!-- Q5-3回答はここから -->
+    <div class="flex--left">
       <div class="item--box">item1</div>
       <div class="item--box">item2</div>
       <div class="item--box">item3</div>
       <div class="item--box">item4</div>
       <div class="item--box">item5</div>
     </div>
-    <!-- Q5-2回答はここまで -->
-    <h3 class="question--title">Q5-3 水平方向揃え</h3>
-    <!-- Q5-3回答はここから -->
-    <div class="">
+    <div class="flex--right">
+      <div class="item--box">item1</div>
+      <div class="item--box">item2</div>
+      <div class="item--box">item3</div>
+      <div class="item--box">item4</div>
+      <div class="item--box">item5</div>
+    </div>
+    <div class="flex--center">
+      <div class="item--box">item1</div>
+      <div class="item--box">item2</div>
+      <div class="item--box">item3</div>
+      <div class="item--box">item4</div>
+      <div class="item--box">item5</div>
+    </div>
+    <div class="flex--between">
+      <div class="item--box">item1</div>
+      <div class="item--box">item2</div>
+      <div class="item--box">item3</div>
+      <div class="item--box">item4</div>
+      <div class="item--box">item5</div>
+    </div>
+    <div class="flex--around">
       <div class="item--box">item1</div>
       <div class="item--box">item2</div>
       <div class="item--box">item3</div>
@@ -46,12 +139,37 @@
     <!-- Q5-3回答はここまで -->
     <h3 class="question--title">Q5-4 グリッドレイアウト</h3>
     <!-- Q5-4回答はここから -->
-    <div class="">
-      <div class="item--box">item1</div>
-      <div class="item--box">item2</div>
-      <div class="item--box">item3</div>
-      <div class="item--box">item4</div>
-      <div class="item--box">item5</div>
+    <div class="grid--columns">
+      <div class="grid--box">item1</div>
+      <div class="grid--box">item2</div>
+      <div class="grid--box">item3</div>
+      <div class="grid--box">item4</div>
+      <div class="grid--box">item5</div>
+      <div class="grid--box">item6</div>
+    </div>
+    <div class="grid--fr">
+      <div class="grid--box">item1</div>
+      <div class="grid--box">item2</div>
+      <div class="grid--box">item3</div>
+      <div class="grid--box">item4</div>
+      <div class="grid--box">item5</div>
+      <div class="grid--box">item6</div>
+    </div>
+    <div class="grid--rows">
+      <div class="grid--box">item1</div>
+      <div class="grid--box">item2</div>
+      <div class="grid--box">item3</div>
+      <div class="grid--box">item4</div>
+      <div class="grid--box">item5</div>
+      <div class="grid--box">item6</div>
+    </div>
+    <div class="grid--wrapper">
+      <div class="grid--box red--box">item1</div>
+      <div class="grid--box">item2</div>
+      <div class="grid--box green--box">item3</div>
+      <div class="grid--box yellow--box">item4</div>
+      <div class="grid--box">item5</div>
+      <div class="grid--box">item6</div>
     </div>
     <!-- Q5-4回答はここまで -->
   </div>
